--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,39 @@ body {
     height: 60px;
     background-color: #f5f5f5;
 }
+.tpe-1, .tpe-2, .tpe-3 {
+    padding: 60px 0;
+}
+.tpe-1 {
+    background: white;
+}
+.tpe-2 {
+    background: #c2c2c2;
+}
+.tpe-3 {
+    background: white;
+}
+.picto {
+    font-size: 80px;
+    margin-top: 30px;
+}
+.picto-big {
+    font-size: 100px;
+    margin-top: 20px;
+    margin-left: 3px;
+}
+.circle {
+    width: 140px;
+    height: 140px;
+    border-radius: 80px;
+    background: #c2c2c2;
+    display: inline-block;
+    text-align: center;
+}
+.choice, .vr {
+    font-size: 15px;
+ 
+}
+.choice-title {
+    font-weight: bold;
+}
