--- a/partials/header.html
+++ b/partials/header.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="/">Accueil<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/histoire.html">Histoire de la VR</a>
@@ -23,7 +23,7 @@
         <div class="my-2 my-lg-0">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Source</a>
+                    <a class="nav-link" href="/sources.html">Sources</a>
                 </li>
             </ul>
         </div>
